--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -29,10 +29,12 @@ dependencies {
     compile "com.android.support:palette-v7:$androidSupportVersion"
     compile "com.android.support:recyclerview-v7:$androidSupportVersion"
     compile "com.android.support:cardview-v7:$androidSupportVersion"
-    compile 'com.android.support:design:25.3.1'
 
 
 
-    compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile files('libs/volley.jar')
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
